[metadata]
name = Flask-Apm
version = 0.0.1
author = Michel Lampo
author_email = michel.lampo@creatingfuture.eu
maintainer = Michel Lampo
maintainer_email = michel.lampo@creatingfuture.eu
description = An APM for Flask applications.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = flask, apm
url = https://github.com/michel-cf/flask-apm
# TODO add project urls
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir = = src
packages = find:
include_package_data = True
python_requires = >=3.7

[options.packages.find]
where = src